<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AboutActivity">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_8sdp"
    >
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/khublei_logo"/>

        <TextView
            android:id="@+id/about_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/about_content"
            android:textColor="#222"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/round_square"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_square"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_5sdp">
    <TextView
        android:id="@+id/info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_content"
        android:textColor="#222"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#222"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Mr. Kyrshanlang R. Dkhar."
        android:onClick="openLink"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/group_min"
        />
    <TextView
        android:id="@+id/credits_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/credits_content"
        android:textColor="#222"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/round_square"/>
    <TextView
        android:id="@+id/support_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/support_content"
        android:textColor="#222"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/round_square"/>
            <Button
                android:id="@+id/know_button"
                android:background="@color/blackTransaparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/know_button"
                android:layout_margin="@dimen/_15sdp"
                android:textColor="@android:color/white"
                android:onClick="openGithub"/>
        </LinearLayout>
</ScrollView>